@@ -27,7 +27,10 @@ PTAG = RELEASE_$(PVERSION)_0
 ORIGDIR = $(SOURCE)-$(VERSION)
 TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
 
-CFLAGS = -O2 -g -Wall -DMACHINE_ARCH='"$(DEB_HOST_ARCH_CPU)"' -DMACHINE_MULTIARCH='"$(DEB_HOST_MULTIARCH)"' -D_GNU_SOURCE -D'__FBSDID(string)=' -I$(CURDIR)/build-tree/src/sys
+CFLAGS = -O2 -g -Wall -D_GNU_SOURCE -D'__FBSDID(string)=' \
+         -DMACHINE_ARCH='"$(DEB_HOST_ARCH_CPU)"' \
+         -DMACHINE_MULTIARCH='"$(DEB_HOST_MULTIARCH)"' \
+         -I$(CURDIR)/build-tree/src/sys
 MAKE_BUILD_FLAGS = CC=gcc NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO
 
 PMAKE_BOOTSTRAP = $(CURDIR)/build-tree/src/usr.bin/make/pmake
