@@ -22,6 +22,7 @@ freebsd-buildutils (8.2-1) UNRELEASED; urgency=low
       correct paths for i386 based architectures.
     - Add builtin MACHINE_MULTIARCH make variable.
   * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
+  * Line-wrap CFLAGS variable in debian/rules.
 
  -- Robert Millan <rmh@debian.org>  Thu, 13 Jan 2011 18:29:12 +0100
 
